# ec_modules

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AUTHORS  LICENSE  README.md  environment.yaml  mkdocs.yaml  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  pre-commit.yml
docs/: conventions.md  goals.md  index.md
docs/about/: reasoning.md
docs/contributing/: conventions.md  module.md  wrapper.md
docs/development_guide/: conventions.md  getting_started.md  module.md  modules.md  wrappers.md
docs/hooks/: module_sections.py
docs/user_guide/: getting_started.md  modules.md  wrappers.md
modules/_copier_template/: copier.yaml
modules/_example_module/: README.md
modules/_example_region_availability/: README.md
modules/_template/: README.md  copier.yaml
modules/biofuels/: AUTHORS.md  CITATION.cff  LICENSE  README.md
modules/capacity_factors_wind_pv/: AUTHORS.md  LICENSE  README.md
modules/demand_electricity/: AUTHORS.md  CITATION.cff  README.md
modules/example_module/: README.md
modules/heat/: AUTHORS.md  CITATION.cff  LICENSE  LICENSE.txt  README.md
modules/hydro/: README.md  environment.yaml
modules/hydropower/: AUTHORS.md  CITATION.cff  README.md
modules/industry/: AUTHORS.md  LICENSE  README.md
modules/transport_road/: LICENSE  README.md
modules/wind_pv/: AUTHORS.md  CITATION.cff  README.md
pseudo-modularisation/: README.md  Snakefile  config.yaml
scripts/demand/: national_load.py
wrapper/appender/: environment.yaml
wrappers/_template/: copier.yaml
wrappers/atlite/: README.md
(+321 files in other folders)
